@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r8-pre8
+  {
+    Modules = LHCbDIRAC:v8r8-pre8, LHCbWebDIRAC:v4r3p2
+    Depends = DIRAC:v6r17p20
+    LcgVer = 2017-05-23
+  }
+
   v0r8807
   {
     Modules = LHCbDIRAC:v0r8807, LHCbWebDIRAC:v4r3p2
